<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open"
        android:title="@string/action_open" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy" />
    <item
        android:id="@+id/action_move"
        android:title="@string/action_move" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_add_favorite" />
</menu>