<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_name"
                android:title="@string/sort_name" />
            <item
                android:id="@+id/sort_date"
                android:title="@string/sort_date" />
            <item
                android:id="@+id/sort_size"
                android:title="@string/sort_size" />
            <item
                android:id="@+id/sort_type"
                android:title="@string/sort_type" />
        </menu>
    </item>

    <item
        android:id="@+id/action_view"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_view"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/view_list"
                android:title="@string/view_list" />
            <item
                android:id="@+id/view_grid"
                android:title="@string/view_grid" />
        </menu>
    </item>

</menu>