<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_folder"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_recent" />
    </group>

    <item android:title="@string/menu_storage">
        <menu>
            <item
                android:id="@+id/nav_internal"
                android:icon="@android:drawable/ic_menu_save"
                android:title="@string/menu_internal_storage" />
            <item
                android:id="@+id/nav_external"
                android:icon="@android:drawable/ic_menu_mylocation"
                android:title="@string/menu_external_storage" />
        </menu>
    </item>

    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_change_theme" />
        </menu>
    </item>
</menu>